Added homography check, with some experiment code

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ compiled-MEngTracker.sln
 compiled-MEngTracker/old demo code/
 compiled-MEngTracker/compiled-MEngTracker.vcxproj
 compiled-MEngTracker/compiled-MEngTracker.vcxproj.filters
+compiled-MEngTracker/sampleC/
+compiled-MEngTracker/sampleD/
+compiled-MEngTracker/sampleE/
+compiled-MEngTracker/saveMat/
+compiled-MEngTracker/bandicam 2017-04-12 15-44-38-639.jpg
